// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`In components/Buttons.js Test Buttons:  should not update bar value without selected progressbar. 1`] = `
<Button
  className="height-3rem rounded-0 mb-2
                    btn-light"
  color="secondary"
  disabled={true}
  onClick={[Function]}
  tag="button"
>
  +
  40
</Button>
`;

exports[`In components/Buttons.js Test Buttons:  should render Buttons correctly with data. 1`] = `
<Button
  className="height-3rem rounded-0 mb-2
                    btn-outline-info"
  color="secondary"
  disabled={true}
  onClick={[Function]}
  tag="button"
>
  +
  35
</Button>
`;

exports[`In components/Buttons.js Test Buttons:  should render Buttons correctly without data. 1`] = `
<Button
  className="height-3rem rounded-0 mb-2
                    btn-outline-info"
  color="secondary"
  disabled={true}
  onClick={[Function]}
  tag="button"
/>
`;
